syntax = "proto3";

package rpcpto;

service RpcEngine {
	rpc RegisterEngine(ReqRegister) returns (RetRegister) {}
}


message ReqRegister {
	int32 gsId 		= 1;
}

message RetRegister {
	int32 ret		= 1;
}
